# cl_parse

./: .gitignore  Cargo.toml  LICENSE  README.md
.github/workflows/: ci.yml  grcov.yml  rust.yml  tag.yml  test.yml
src/: cl_def.rs  command_line.rs  lib.rs  messages.yaml  option_def.rs  tests.rs  text.rs
src/command_line/: tests.rs
src/text/: en_us.rs
tests/: integration_tests.rs
