[package]
name = "cl_parse"
version = "0.2.2"
edition = "2021"
authors = ["berryware"]
description = "A library for defining and parsing commandline options and arguments"
repository = "https://github.com/exaxisllc/cl_parse"
documentation = "https://docs.rs/cl_parse/"
license = "MIT"
keywords = ["cli", "parse", "options", "arguments"]
exclude = ["target"]
readme = "README.md"
categories = ["command-line-interface", "command-line-utilities"]


[dependencies]
sys-locale = "0.3.1"
lazy_static = "1.5.0"
